[MD] Adjust algorithm for colorizing icons in incognito contexts.

BUG=611617

Review-Url: https://codereview.chromium.org/1977693004
Cr-Commit-Position: refs/heads/master@{#393892}

Former-commit-id: b216164c4d208a54f3469fc4b6fb5c3f845d38c6